--- a/lesson1/Makefile
+++ b/lesson1/Makefile
@@ -1,22 +1,23 @@
-ARMGNU ?= aarch64-elf
+ARMGNU = clang --target=aarch64-elf
 
-COPS = -Wall -nostdlib -nostartfiles -ffreestanding -Iinclude -mgeneral-regs-only
+#Removed -nostartfiles
+COPS = -Wall -nostdlib -ffreestanding -Iinclude -mgeneral-regs-only
 ASMOPS = -Iinclude 
 
 BUILD_DIR = build
 SRC_DIR = src
 
-all: kernel8.img
+all : kernel8.img
 
-clean:
-	rm -rf $(BUILD_DIR) *.img
+clean :
+	rm -rf $(BUILD_DIR) *.img 
 
 $(BUILD_DIR)/%_c.o: $(SRC_DIR)/%.c
 	mkdir -p $(@D)
-	$(ARMGNU)-gcc $(COPS) -MMD -c $< -o $@
+	$(ARMGNU) $(COPS) -c $< -o $@
 
 $(BUILD_DIR)/%_s.o: $(SRC_DIR)/%.S
-	$(ARMGNU)-gcc $(ASMOPS) -MMD -c $< -o $@
+	$(ARMGNU) $(ASMOPS) -c $< -o $@
 
 C_FILES = $(wildcard $(SRC_DIR)/*.c)
 ASM_FILES = $(wildcard $(SRC_DIR)/*.S)
@@ -27,5 +28,5 @@ DEP_FILES = $(OBJ_FILES:%.o=%.d)
 -include $(DEP_FILES)
 
 kernel8.img: $(SRC_DIR)/linker.ld $(OBJ_FILES)
-	$(ARMGNU)-ld -T $(SRC_DIR)/linker.ld -o $(BUILD_DIR)/kernel8.elf  $(OBJ_FILES)
-	$(ARMGNU)-objcopy $(BUILD_DIR)/kernel8.elf -O binary kernel8.img
+	ld.lld -m aarch64elf -nostdlib $(OBJ_FILES) -T $(SRC_DIR)/linker.ld -o $(BUILD_DIR)/kernel8.elf
+	llvm-objcopy -O binary $(BUILD_DIR)/kernel8.elf kernel8.img
